crates/ruff_linter/src/rules/flake8_builtins/snapshots/ruff_linter__rules__flake8_builtins__tests__A005_A005__modules__utils__logging.py_src.snap
---
source: crates/ruff_linter/src/rules/flake8_builtins/mod.rs
---
[A005]: Module `logging` shadows a Python standard-library module
--> logging.py:1:1
 |
 |
